# password-manager

./: README.rst  RELEASE_NOTES.rst  pyproject.toml
scripts/: pm
src/password_manager/: __init__.py  password_manager.py
tests/: __init__.py  test_password_manager.py
